; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_20836.c_resolv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_20836.c_resolv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.hostent = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resolv(i8* %0, %struct.in_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.in_addr*, align 8
  %6 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.in_addr* %1, %struct.in_addr** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %9 = call i64 @inet_aton(i8* %7, %struct.in_addr* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %26

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call %struct.hostent* @gethostbyname(i8* %13)
  store %struct.hostent* %14, %struct.hostent** %6, align 8
  %15 = load %struct.hostent*, %struct.hostent** %6, align 8
  %16 = icmp eq %struct.hostent* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %26

18:                                               ; preds = %12
  %19 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %20 = bitcast %struct.in_addr* %19 to i8*
  %21 = load %struct.hostent*, %struct.hostent** %6, align 8
  %22 = getelementptr inbounds %struct.hostent, %struct.hostent* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to i8*
  %25 = call i32 @memcpy(i8* %20, i8* %24, i32 4)
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %18, %17, %11
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @inet_aton(i8*, %struct.in_addr*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
